added all but 13 descriptons

--- a/index.html
+++ b/index.html
@@ -217,7 +217,298 @@
               tree for achieved enlightenment.
             </p>
           </div>
+          <div class="flora-item">
+            <img
+              src="Plants/pinktrumpet/pinktrumpetflower.jpg"
+              alt="pink trumpet tree"
+            />
+            <h3>Pink Trumpet Tree or Tabebuia rosea tree</h3>
+            <p>
+              <b>Origin:</b> Native to Central and South America
+            </p>
+            <p><b>Coordinates:</b>12.021618,79.855919</p>
+            <p>
+              Tabebuia rosea, also called pink poui, and rosy trumpet tree is a neotropical tree that grows up to 30 m (98 ft) and can reach a diameter at breast height of up to 100 cm (3 ft).
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/arecapalm.jpg"
+              alt="Areca Palm"
+            />
+            <h3>Dypsis lutescens or Areca Palm</h3>
+            <p>
+              <b>Origin:</b> Native to Madagascar
+            </p>
+            <p><b>Coordinates:</b>12.021618,79.855919</p>
+            <p>
+              Dypsis lutescens most commonly known as areca palm is a beautiful palm plant and is a very popular ornamental all over the world. It is a very hardy plant and can survive in almost all weather conditions. It is particularly popular for its unique nature of giving out oxygen during the night time and also helps in purifying the air inside.
+
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/badmintonballtree/badmintonbaltree.jpg"
+              alt="Badminton Ball Tree"
+            />
+            <h3>Badminton Ball Tree (Parkia biglandulosa)</h3>
+            <p>
+              <b>Origin:</b> Southeast Asia
+            </p>
+            <p><b>Coordinates:</b>12.033173, 79.859959</p>
+            <p>
+              Commonly found near academic buildings, this tree produces spherical flower heads that resemble badminton shuttlecocks, giving it its common name. The tree can grow up to 30 meters tall and has compound leaves that fold at night. Its pods contain edible seeds that are used in certain traditional dishes in Southeast Asia.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/Indian Cork Tree, Millingtonia Hortensis.jpg"
+              alt="Indian Cork Tree"
+            />
+            <h3>Indian Cork Tree (Millingtonia hortensis)</h3>
+            <p>
+              <b>Origin:</b> Myanmar and Thailand
+            </p>
+            <p><b>Coordinates:</b>12.03406, 79.856588</p>
+            <p>
+              Also known as the Tree Jasmine, this tall evergreen tree produces fragrant white flowers, especially during the night. It can grow up to 25 meters tall with a straight trunk. The bark is used in traditional medicine to treat asthma and other respiratory conditions. The light, cork-like bark gives it its common name.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/ButterTree.jpg"
+              alt="Indian Butter Tree"
+            />
+            <h3>Indian Butter Tree (Madhuca longifolia)</h3>
+            <p>
+              <b>Origin:</b> Indian Subcontinent
+            </p>
+            <p><b>Coordinates:</b>12.01731, 79.85265</p>
+            <p>
+              Also known as Mahua, this tree produces edible flowers that are fermented to make alcoholic beverages in tribal areas. The seeds yield butter-like oil used in cooking, soap-making, and traditional medicine. It can grow up to 20 meters tall and is considered sacred in many Indian communities.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/cherryplant.jpg"
+              alt="Cherry tree"
+            />
+            <h3> Cherry Tree (Prunus species)</h3>
+            <p>
+              <b>Origin:</b> Depends on species, many from Asia and Europe
+            </p>
+            <p><b>Coordinates:</b>12.016149, 79.85415</p>
+            <p>
+              This beautiful flowering tree produces an abundance of blossoms, creating a stunning visual display during the flowering season. The specific variety at this location adds ornamental value to the campus with its seasonal blooms and compact growth habit.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/Gliricidia sepium.jpg"
+              alt="Madre de cacao"
+            />
+            <h3>Madre de Cacao (Gliricidia sepium)</h3>
+            <p>
+              <b>Origin:</b>Central America
+            </p>
+            <p><b>Coordinates:</b>12.03406, 79.856588</p>
+            <p>
+              A multipurpose tree used in agroforestry systems, it produces pink to purple flowers and has nitrogen-fixing properties that improve soil fertility. Growing to 10-12 meters tall, it's commonly used as living fences and shade trees for coffee and cacao plantations. All parts of the plant are toxic to rodents, giving it another common name, "Rat Killer."
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/banyan tree.jpg"
+              alt="Banyan Tree"
+            />
+            <h3>Banyan Tree (Ficus benghalensis)</h3>
+            <p>
+              <b>Origin:</b>Indian Subcontinent
+            </p>
+            <p><b>Coordinates:</b>12.01636, 79.85378</p>
+            <p>
+              India's national tree, known for its aerial prop roots that grow into thick woody trunks. It can spread over several acres, creating a mini-ecosystem supporting numerous life forms. Some banyan trees are hundreds of years old and have cultural and spiritual significance in Hinduism and Buddhism.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/WildIndianAlmond.jpg"
+              alt="Wild Indian Almond"
+            />
+            <h3>Wild Indian Almond (Sterculia foetida)</h3>
+            <p>
+              <b>Origin:</b>East Africa, South and Southeast Asia
+            </p>
+            <p><b>Coordinates:</b>12.015963, 79.854473</p>
+            <p>
+              This large deciduous tree produces star-shaped pods containing edible seeds. The tree can grow up to 40 meters tall with a straight trunk and horizontally spreading branches. Despite its name "foetida" (meaning foul-smelling), it's valued for its timber and medicinal properties.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/PilkanTree.jpg"
+              alt="Pilkhan Tree"
+            />
+            <h3>Pilkhan Tree (Ficus virens)</h3>
+            <p>
+              <b>Origin:</b>South and Southeast Asia
+            </p>
+            <p><b>Coordinates:</b>12.0166, 79.85318</p>
+            <p>
+              Also known as the White Fig, this tree starts life as an epiphyte, eventually sending roots to the ground and sometimes strangling its host. It produces small fig fruits that are popular with birds and wildlife. The tree can grow to 30 meters tall and has medicinal uses in traditional Ayurvedic medicine.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/Teak.jpg"
+              alt="Teak"
+            />
+            <h3>Teak (Tectona grandis)</h3>
+            <p>
+              <b>Origin:</b>South and Southeast Asia
+            </p>
+            <p><b>Coordinates:</b> 12.015774, 79.854724</p>
+            <p>
+              Prized for its highly durable wood that's resistant to termites, fungal decay, and water damage. The tree can grow up to 40 meters tall with large, ovate leaves. Teak wood is one of the most valuable timbers worldwide, used in high-quality furniture, shipbuilding, and decorative objects.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+            src="Plants/Flametree.jpg"
+            alt="Flame tree"
+          />
+          <h3> Flame Tree (Delonix regia)</h3>
+          <p>
+            <b>Origin:</b>Madagascar
+          </p>
+          <p><b>Coordinates:</b> 12.016723, 79.85354</p>
+          <p>
+            Also known as Royal Poinciana or Flamboyant, this tree produces spectacular displays of fiery red-orange blooms. It grows up to 12 meters tall with a wide-spreading umbrella-shaped canopy and delicate fern-like leaves. It's known as one of the most colorful trees in the world during its flowering period.
+          </p>
         </div>
+        <div class="flora-item">
+          <img
+            src="Plants/earpodtree/Earpodtree.jpg"
+            alt="Earpod tree"
+          />
+          <h3>Earpod Tree (Enterolobium cyclocarpum)</h3>
+          <p>
+            <b>Origin:</b>Central and South America
+          </p>
+          <p><b>Coordinates:</b>12.021086, 79.854311</p>
+          <p>
+            Named after its distinctive ear-shaped seed pods, this massive tree can grow up to 35 meters tall with a broad, umbrella-shaped crown. It's one of the largest trees in the Americas, with a trunk diameter reaching up to 3 meters. The wood is used in furniture making, and the tree has nitrogen-fixing properties beneficial for soil.
+          </p>
+        </div>
+        <div class="flora-item">
+          <img
+            src="Plants/autographtree.jpg"
+            alt="Autograph Tree"
+          />
+          <h3>Autograph Tree (Clusia rosea)</h3>
+          <p>
+            <b>Origin:</b>Caribbean
+          </p>
+          <p><b>Coordinates:</b>12.021604, 79.853932</p>
+          <p>
+            Also known as the Pitch Apple, this evergreen tree gets its common name from the ease with which one can scratch messages onto its thick, leathery leaves. It produces large white flowers with pink centers and starts life as an epiphyte, eventually sending down aerial roots. It's considered invasive in some Pacific islands.
+          </p>
+        </div>
+        <div class="flora-item">
+          <img
+            src="Plants/tamrind/amrindcloseup.jpg"
+            alt="Autograph Tree"
+          />
+          <h3>Tamarind Tree (Tamarindus indica)</h3>
+          <p>
+            <b>Origin:</b> Africa
+          </p>
+          <p><b>Coordinates:</b>12.02526, 79.85082</p>
+          <p>
+            Despite its name suggesting Indian origin, the tamarind originated in Africa but has been cultivated in India for thousands of years. The tree produces pod-like fruits with a sweet-sour pulp used extensively in Asian and Latin American cuisines. It can grow up to 30 meters tall and live for over 200 years.
+          </p>
+        </div>
+        <div class="flora-item">
+          <img
+            src="Plants/peepal/peepaltree.jpg"
+            alt="Autograph Tree"
+          />
+          <h3>Peepal Tree (Ficus religiosa)</h3>
+          <p>
+            <b>Origin:</b>Indian Subcontinent
+          </p>
+          <p><b>Coordinates:</b>12.02192, 79.85295</p>
+          <p>
+            Also known as the Sacred Fig or Bodhi Tree, it has deep religious significance in Hinduism, Buddhism, and Jainism. Buddha is said to have attained enlightenment under this tree. It has distinctive heart-shaped leaves with elongated tips and can live for hundreds of years, reaching heights of up to 30 meters.
+          </p>
+        </div>
+        <!--
+        Remaining descriptions to be added 
+## 30. White Trumpet Vine (Brugmansia suaveolens)
+**Origin:** South America  
+**Coordinates:** 12.021372, 79.853283  
+**Description:** Also called Angel's Trumpet, this woody shrub or small tree produces large, fragrant, hanging trumpet-shaped flowers that bloom at night. All parts of the plant are highly toxic, containing tropane alkaloids. It can grow up to 5 meters tall and was traditionally used by shamans in South America for its hallucinogenic properties.
+
+## 31. Bougainvillea (Bougainvillea species)
+**Origin:** South America  
+**Coordinates:** 12.02289, 79.85247  
+**Description:** Often called paperflower, this popular ornamental vine is known for its vibrant paper-like modified leaves (bracts) in shades of pink, purple, red, orange, or white. The true flowers are small and usually white. Bougainvillea is drought-tolerant, can be trained as a climbing vine or pruned into a shrub, and blooms nearly year-round in tropical climates.
+
+## 32. Lipstick Tree (Bixa orellana)
+**Origin:** Tropical Americas  
+**Coordinates:** 12.02308, 79.84727  
+**Description:** Named for the bright red-orange dye extracted from its seeds, which has been used as body paint, food coloring, and lipstick. The small tree or shrub produces pretty pink flowers and spiny heart-shaped seed pods. The natural dye, annatto, is still widely used as a culinary colorant in foods like cheese, butter, and rice dishes.
+
+## 33. Dragon Bones/Candelabra Plant (Euphorbia lactea)
+**Origin:** Southeast Asia and India  
+**Coordinates:** 12.022316, 79.847822  
+**Description:** This succulent cactus-like plant has a distinctive candelabra-shaped growth pattern with upright, branching stems featuring three ribs with small spines. Often cultivated with crested forms that resemble brain coral. Like other euphorbias, it contains a toxic white latex. It can grow up to 5 meters tall in ideal conditions.
+
+## 34. Chiku/Sapodilla (Manilkara zapota)
+**Origin:** Central America and southern Mexico  
+**Coordinates:** 12.0214, 79.8496  
+**Description:** An evergreen tree that produces sweet, brown fruits with a flavor similar to pears and brown sugar. The tree can grow up to 30 meters tall and once was the source of chicle, the original base for chewing gum. It has dark, glossy leaves and can live for over 100 years while continuing to produce fruit.
+
+## 35. Mimosa Tree (Albizia julibrissin)
+**Origin:** Southwest and Eastern Asia  
+**Coordinates:** 12.026192, 79.851797  
+**Description:** Also known as the Silk Tree or Persian Silk Tree, this small deciduous tree produces delicate pink, silky thread-like flowers that resemble pom-poms. The leaves are fern-like and fold at night or when touched, similar to the Touch-Me-Not plant. It grows quickly to about 12 meters tall and has a broad, spreading crown.
+
+## 36. River Tamarind (Leucaena leucocephala)
+**Origin:** Southern Mexico and Northern Central America  
+**Coordinates:** 12.01882, 79.850851  
+**Description:** A fast-growing small tree that produces white, globular flowers and flat seed pods. It's extensively used in agroforestry as it fixes nitrogen in the soil. While valuable for erosion control and as a protein-rich fodder crop, it's considered invasive in many tropical regions due to its aggressive spreading nature.
+
+## 37. Foxtail Palm (Wodyetia bifurcata)
+**Origin:** Australia  
+**Coordinates:** 12.02692, 79.852961  
+**Description:** Named for its distinctive fronds that resemble a fox's tail, this elegant palm was only discovered by science in the 1970s. It can grow up to 10 meters tall with a smooth, gray trunk. The palm produces bright red fruits and is widely cultivated as an ornamental in tropical and subtropical regions worldwide.
+
+## 38. Azalea Plant (Rhododendron species)
+**Origin:** Varies by species, many from Asia, North America, and Europe  
+**Coordinates:** 12.02789, 79.85435  
+**Description:** These flowering shrubs are known for their spectacular spring blooms in shades of pink, red, purple, white, and orange. Technically all azaleas are rhododendrons, though they tend to be smaller with thinner leaves. They prefer acidic soil and partial shade and are widely cultivated for their ornamental value.
+
+## 39. Rain Tree (Samanea saman)
+**Origin:** Central and South America  
+**Coordinates:** 12.034022, 79.856566  
+**Description:** Also known as the Monkey Pod Tree, this massive shade tree can grow up to 25 meters tall with a canopy spread of 30 meters or more. It gets its name because the leaves fold at night and during rain. The tree produces pink puffball flowers and woody pods containing edible seeds covered in sweet pulp.
+
+## 40. Coralwood (Adenanthera pavonina L.)
+**Origin:** Southern Asia and Pacific Islands  
+**Coordinates:** 12.034882, 79.857618  
+**Description:** Also called Red Sandalwood or Red Bead Tree, this legume produces bright red seeds that are used as beads in jewelry and for traditional weight measurements (they each weigh almost exactly one grain/0.065g). The tree can grow up to 20 meters tall and provides valuable hardwood timber with a red heartwood.
+
+## 41. Copper Leaf (Acalypha wilkesiana)
+**Origin:** Pacific Islands  
+**Coordinates:** 12.034353, 79.858749  
+**Description:** A colorful ornamental shrub with large, heart-shaped leaves that display stunning patterns of red, copper, pink, and green. It can grow up to 3 meters tall and is commonly used as a hedge or accent plant in tropical landscapes. The plant produces small, inconspicuous flowers on catkin-like spikes.
+
+## 42. Yellow Flame (Peltophorum pterocarpum)
+**Origin:** Southeast Asia and Northern Australia  
+**Coordinates:** 12.01844, 79.85074  
+**Description:** Also known as Copper Pod or Yellow Poinciana, this medium to large deciduous tree produces masses of bright yellow flowers, creating a spectacular display when in bloom. It can grow up to 24 meters tall and is widely planted as a shade and ornamental tree throughout tropical regions. The wood is used for cabinetry and construction.
+        -->
       </section>
       <!-- Fauna Facts Section -->
       <section id="fauna-facts-section">
