added all descriptions. Need around 8 more plants to reach 50

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
         <div class="flora-item">
           <img
             src="Plants/tamrind/amrindcloseup.jpg"
-            alt="Autograph Tree"
+            alt="Tamrind Tree"
           />
           <h3>Tamarind Tree (Tamarindus indica)</h3>
           <p>
@@ -427,88 +427,218 @@
           <p>
             Despite its name suggesting Indian origin, the tamarind originated in Africa but has been cultivated in India for thousands of years. The tree produces pod-like fruits with a sweet-sour pulp used extensively in Asian and Latin American cuisines. It can grow up to 30 meters tall and live for over 200 years.
           </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/peepal/peepaltree.jpg"
+              alt="Peepal Tree"
+            />
+            <h3>Peepal Tree (Ficus religiosa)</h3>
+            <p>
+              <b>Origin:</b>Indian Subcontinent
+            </p>
+            <p><b>Coordinates:</b>12.02192, 79.85295</p>
+            <p>
+              Also known as the Sacred Fig or Bodhi Tree, it has deep religious significance in Hinduism, Buddhism, and Jainism. Buddha is said to have attained enlightenment under this tree. It has distinctive heart-shaped leaves with elongated tips and can live for hundreds of years, reaching heights of up to 30 meters.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/trumpetvine/white trumpet vine.jpg"
+              alt="White Trumpet Vine"
+            />
+            <h3>White Trumpet Vine (Brugmansia suaveolens)</h3>
+            <p>
+              <b>Origin:</b>South America
+            </p>
+            <p><b>Coordinates:</b>12.021372, 79.853283</p>
+            <p>
+              Also called Angel's Trumpet, this woody shrub or small tree produces large, fragrant, hanging trumpet-shaped flowers that bloom at night. All parts of the plant are highly toxic, containing tropane alkaloids. It can grow up to 5 meters tall and was traditionally used by shamans in South America for its hallucinogenic properties.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/bougenvillea/bougenvillea.jpg"
+              alt="Bougainvillea"
+            />
+            <h3>Bougainvillea (Bougainvillea species)</h3>
+            <p>
+              <b>Origin:</b>South America  
+            </p>
+            <p><b>Coordinates:</b>12.02289, 79.85247 </p>
+            <p>
+              Often called paperflower, this popular ornamental vine is known for its vibrant paper-like modified leaves (bracts) in shades of pink, purple, red, orange, or white. The true flowers are small and usually white. Bougainvillea is drought-tolerant, can be trained as a climbing vine or pruned into a shrub, and blooms nearly year-round in tropical climates.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/lipsticktree.jpg"
+              alt="Lipstick Tree"
+            />
+            <h3>Lipstick Tree (Bixa orellana)</h3>
+            <p>
+              <b>Origin:</b> Tropical Americas 
+            </p>
+            <p><b>Coordinates:</b>12.02308, 79.84727 </p>
+            <p>
+              Named for the bright red-orange dye extracted from its seeds, which has been used as body paint, food coloring, and lipstick. The small tree or shrub produces pretty pink flowers and spiny heart-shaped seed pods. The natural dye, annatto, is still widely used as a culinary colorant in foods like cheese, butter, and rice dishes.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/dragonbones/candeblara.jpg"
+              alt="Lipstick Tree"
+            />
+            <h3>Dragon Bones/Candelabra Plant (Euphorbia lactea)</h3>
+            <p>
+              <b>Origin:</b>Southeast Asia and India 
+            </p>
+            <p><b>Coordinates:</b>12.022316, 79.847822</p>
+            <p>
+              This succulent cactus-like plant has a distinctive candelabra-shaped growth pattern with upright, branching stems featuring three ribs with small spines. Often cultivated with crested forms that resemble brain coral. Like other euphorbias, it contains a toxic white latex. It can grow up to 5 meters tall in ideal conditions.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/chickoo/chicootree.jpg"
+              alt="Chiku"
+            />
+            <h3>Chiku/Sapodilla (Manilkara zapota)</h3>
+            <p>
+              <b>Origin:</b>Central America and southern Mexico
+            </p>
+            <p><b>Coordinates:</b>12.0214, 79.8496 </p>
+            <p>
+              An evergreen tree that produces sweet, brown fruits with a flavor similar to pears and brown sugar. The tree can grow up to 30 meters tall and once was the source of chicle, the original base for chewing gum. It has dark, glossy leaves and can live for over 100 years while continuing to produce fruit.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/mimosa/mimosa.jpg"
+              alt="Mimosa"
+            />
+            <h3>Mimosa Tree (Albizia julibrissin)</h3>
+            <p>
+              <b>Origin:</b>Southwest and Eastern Asia
+            </p>
+            <p><b>Coordinates:</b>12.026192, 79.851797</p>
+            <p>
+              Also known as the Silk Tree or Persian Silk Tree, this small deciduous tree produces delicate pink, silky thread-like flowers that resemble pom-poms. The leaves are fern-like and fold at night or when touched, similar to the Touch-Me-Not plant. It grows quickly to about 12 meters tall and has a broad, spreading crown.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/rivertamrind.jpg"
+              alt="river tamarind"
+            />
+            <h3>River Tamarind (Leucaena leucocephala)</h3>
+            <p>
+              <b>Origin:</b>Southern Mexico and Northern Central America
+            </p>
+            <p><b>Coordinates:</b>12.01882, 79.850851</p>
+            <p>
+              A fast-growing small tree that produces white, globular flowers and flat seed pods. It's extensively used in agroforestry as it fixes nitrogen in the soil. While valuable for erosion control and as a protein-rich fodder crop, it's considered invasive in many tropical regions due to its aggressive spreading nature.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/foxtailpalm/foxtailpalmdroop.jpg"
+              alt="Foxtail Palm"
+            />
+            <h3>Foxtail Palm (Wodyetia bifurcata)</h3>
+            <p>
+              <b>Origin:</b> Australia
+            </p>
+            <p><b>Coordinates:</b>12.02692, 79.852961</p>
+            <p>
+              Named for its distinctive fronds that resemble a fox's tail, this elegant palm was only discovered by science in the 1970s. It can grow up to 10 meters tall with a smooth, gray trunk. The palm produces bright red fruits and is widely cultivated as an ornamental in tropical and subtropical regions worldwide.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/azaela/azaelaflower.jpg"
+              alt="Azaela Plant"
+            />
+            <h3>Azalea Plant (Rhododendron species)</h3>
+            <p>
+              <b>Origin:</b>Varies by species, many from Asia, North America, and Europe
+            </p>
+            <p><b>Coordinates:</b>12.02789, 79.85435</p>
+            <p>
+              These flowering shrubs are known for their spectacular spring blooms in shades of pink, red, purple, white, and orange. Technically all azaleas are rhododendrons, though they tend to be smaller with thinner leaves. They prefer acidic soil and partial shade and are widely cultivated for their ornamental value.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/raintree/raintree2.jpg"
+              alt="Rain tree"
+            />
+            <h3>Rain Tree (Samanea saman)</h3>
+            <p>
+              <b>Origin:</b>Central and South America
+            </p>
+            <p><b>Coordinates:</b>12.034022, 79.856566 </p>
+            <p>
+              Also known as the Monkey Pod Tree, this massive shade tree can grow up to 25 meters tall with a canopy spread of 30 meters or more. It gets its name because the leaves fold at night and during rain. The tree produces pink puffball flowers and woody pods containing edible seeds covered in sweet pulp.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/coralwood/coralwoodtree.jpg"
+              alt="Coralwood Tree"
+            />
+            <h3></h3>
+            <p>
+              <b>Origin:</b> Southern Asia and Pacific Islands 
+            </p>
+            <p><b>Coordinates:</b>12.034882, 79.857618 </p>
+            <p>
+              Also called Red Sandalwood or Red Bead Tree, this legume produces bright red seeds that are used as beads in jewelry and for traditional weight measurements (they each weigh almost exactly one grain/0.065g). The tree can grow up to 20 meters tall and provides valuable hardwood timber with a red heartwood.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/coralwood/coralwoodtree.jpg"
+              alt="Coralwood Tree"
+            />
+            <h3></h3>
+            <p>
+              <b>Origin:</b> Southern Asia and Pacific Islands 
+            </p>
+            <p><b>Coordinates:</b>12.034882, 79.857618 </p>
+            <p>
+              Also called Red Sandalwood or Red Bead Tree, this legume produces bright red seeds that are used as beads in jewelry and for traditional weight measurements (they each weigh almost exactly one grain/0.065g). The tree can grow up to 20 meters tall and provides valuable hardwood timber with a red heartwood.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/copperleaf/copperleafplant.jpg"
+              alt="copperleaf"
+            />
+            <h3>Copper Leaf (Acalypha wilkesiana)</h3>
+            <p>
+              <b>Origin:</b>  Pacific Islands
+            </p>
+            <p><b>Coordinates:</b>12.034353, 79.858749 </p>
+            <p>
+              A colorful ornamental shrub with large, heart-shaped leaves that display stunning patterns of red, copper, pink, and green. It can grow up to 3 meters tall and is commonly used as a hedge or accent plant in tropical landscapes. The plant produces small, inconspicuous flowers on catkin-like spikes.
+            </p>
+          </div>
+          <div class="flora-item">
+            <img
+              src="Plants/yellowflame/yellowflameflower.jpg"
+              alt="Yellow Flame"
+            />
+            <h3>Yellow Flame (Peltophorum pterocarpum)</h3>
+            <p>
+              <b>Origin:</b>Southeast Asia and Northern Australia
+            </p>
+            <p><b>Coordinates:</b>12.01844, 79.85074</p>
+            <p>
+              Also known as Copper Pod or Yellow Poinciana, this medium to large deciduous tree produces masses of bright yellow flowers, creating a spectacular display when in bloom. It can grow up to 24 meters tall and is widely planted as a shade and ornamental tree throughout tropical regions. The wood is used for cabinetry and construction.
+            </p>
+          </div>
         </div>
-        <div class="flora-item">
-          <img
-            src="Plants/peepal/peepaltree.jpg"
-            alt="Autograph Tree"
-          />
-          <h3>Peepal Tree (Ficus religiosa)</h3>
-          <p>
-            <b>Origin:</b>Indian Subcontinent
-          </p>
-          <p><b>Coordinates:</b>12.02192, 79.85295</p>
-          <p>
-            Also known as the Sacred Fig or Bodhi Tree, it has deep religious significance in Hinduism, Buddhism, and Jainism. Buddha is said to have attained enlightenment under this tree. It has distinctive heart-shaped leaves with elongated tips and can live for hundreds of years, reaching heights of up to 30 meters.
-          </p>
-        </div>
-        <!--
-        Remaining descriptions to be added 
-## 30. White Trumpet Vine (Brugmansia suaveolens)
-**Origin:** South America  
-**Coordinates:** 12.021372, 79.853283  
-**Description:** Also called Angel's Trumpet, this woody shrub or small tree produces large, fragrant, hanging trumpet-shaped flowers that bloom at night. All parts of the plant are highly toxic, containing tropane alkaloids. It can grow up to 5 meters tall and was traditionally used by shamans in South America for its hallucinogenic properties.
-
-## 31. Bougainvillea (Bougainvillea species)
-**Origin:** South America  
-**Coordinates:** 12.02289, 79.85247  
-**Description:** Often called paperflower, this popular ornamental vine is known for its vibrant paper-like modified leaves (bracts) in shades of pink, purple, red, orange, or white. The true flowers are small and usually white. Bougainvillea is drought-tolerant, can be trained as a climbing vine or pruned into a shrub, and blooms nearly year-round in tropical climates.
-
-## 32. Lipstick Tree (Bixa orellana)
-**Origin:** Tropical Americas  
-**Coordinates:** 12.02308, 79.84727  
-**Description:** Named for the bright red-orange dye extracted from its seeds, which has been used as body paint, food coloring, and lipstick. The small tree or shrub produces pretty pink flowers and spiny heart-shaped seed pods. The natural dye, annatto, is still widely used as a culinary colorant in foods like cheese, butter, and rice dishes.
-
-## 33. Dragon Bones/Candelabra Plant (Euphorbia lactea)
-**Origin:** Southeast Asia and India  
-**Coordinates:** 12.022316, 79.847822  
-**Description:** This succulent cactus-like plant has a distinctive candelabra-shaped growth pattern with upright, branching stems featuring three ribs with small spines. Often cultivated with crested forms that resemble brain coral. Like other euphorbias, it contains a toxic white latex. It can grow up to 5 meters tall in ideal conditions.
-
-## 34. Chiku/Sapodilla (Manilkara zapota)
-**Origin:** Central America and southern Mexico  
-**Coordinates:** 12.0214, 79.8496  
-**Description:** An evergreen tree that produces sweet, brown fruits with a flavor similar to pears and brown sugar. The tree can grow up to 30 meters tall and once was the source of chicle, the original base for chewing gum. It has dark, glossy leaves and can live for over 100 years while continuing to produce fruit.
-
-## 35. Mimosa Tree (Albizia julibrissin)
-**Origin:** Southwest and Eastern Asia  
-**Coordinates:** 12.026192, 79.851797  
-**Description:** Also known as the Silk Tree or Persian Silk Tree, this small deciduous tree produces delicate pink, silky thread-like flowers that resemble pom-poms. The leaves are fern-like and fold at night or when touched, similar to the Touch-Me-Not plant. It grows quickly to about 12 meters tall and has a broad, spreading crown.
-
-## 36. River Tamarind (Leucaena leucocephala)
-**Origin:** Southern Mexico and Northern Central America  
-**Coordinates:** 12.01882, 79.850851  
-**Description:** A fast-growing small tree that produces white, globular flowers and flat seed pods. It's extensively used in agroforestry as it fixes nitrogen in the soil. While valuable for erosion control and as a protein-rich fodder crop, it's considered invasive in many tropical regions due to its aggressive spreading nature.
-
-## 37. Foxtail Palm (Wodyetia bifurcata)
-**Origin:** Australia  
-**Coordinates:** 12.02692, 79.852961  
-**Description:** Named for its distinctive fronds that resemble a fox's tail, this elegant palm was only discovered by science in the 1970s. It can grow up to 10 meters tall with a smooth, gray trunk. The palm produces bright red fruits and is widely cultivated as an ornamental in tropical and subtropical regions worldwide.
-
-## 38. Azalea Plant (Rhododendron species)
-**Origin:** Varies by species, many from Asia, North America, and Europe  
-**Coordinates:** 12.02789, 79.85435  
-**Description:** These flowering shrubs are known for their spectacular spring blooms in shades of pink, red, purple, white, and orange. Technically all azaleas are rhododendrons, though they tend to be smaller with thinner leaves. They prefer acidic soil and partial shade and are widely cultivated for their ornamental value.
-
-## 39. Rain Tree (Samanea saman)
-**Origin:** Central and South America  
-**Coordinates:** 12.034022, 79.856566  
-**Description:** Also known as the Monkey Pod Tree, this massive shade tree can grow up to 25 meters tall with a canopy spread of 30 meters or more. It gets its name because the leaves fold at night and during rain. The tree produces pink puffball flowers and woody pods containing edible seeds covered in sweet pulp.
-
-## 40. Coralwood (Adenanthera pavonina L.)
-**Origin:** Southern Asia and Pacific Islands  
-**Coordinates:** 12.034882, 79.857618  
-**Description:** Also called Red Sandalwood or Red Bead Tree, this legume produces bright red seeds that are used as beads in jewelry and for traditional weight measurements (they each weigh almost exactly one grain/0.065g). The tree can grow up to 20 meters tall and provides valuable hardwood timber with a red heartwood.
-
-## 41. Copper Leaf (Acalypha wilkesiana)
-**Origin:** Pacific Islands  
-**Coordinates:** 12.034353, 79.858749  
-**Description:** A colorful ornamental shrub with large, heart-shaped leaves that display stunning patterns of red, copper, pink, and green. It can grow up to 3 meters tall and is commonly used as a hedge or accent plant in tropical landscapes. The plant produces small, inconspicuous flowers on catkin-like spikes.
-
-## 42. Yellow Flame (Peltophorum pterocarpum)
-**Origin:** Southeast Asia and Northern Australia  
-**Coordinates:** 12.01844, 79.85074  
-**Description:** Also known as Copper Pod or Yellow Poinciana, this medium to large deciduous tree produces masses of bright yellow flowers, creating a spectacular display when in bloom. It can grow up to 24 meters tall and is widely planted as a shade and ornamental tree throughout tropical regions. The wood is used for cabinetry and construction.
-        -->
       </section>
       <!-- Fauna Facts Section -->
       <section id="fauna-facts-section">
