added toggle button for fauna

--- a/index.html
+++ b/index.html
@@ -642,6 +642,11 @@
       </section>
       <!-- Fauna Facts Section -->
       <section id="fauna-facts-section">
+
+        <button id="toggleBtn">
+          Show Crows
+      </button>
+      
         <h2>Fauna of Pondicherry University: Dog Hotspots</h2>
         <p>
           Many dogs reside across the university campus, often forming social
